--- a/src/css/common.css
+++ b/src/css/common.css
@@ -54,6 +54,7 @@ button {
   line-height: 1;
   transition: all 0.2s linear;
   min-width: 100px;
+  white-space: nowrap;
 }
 
 button ~ button {
@@ -82,4 +83,17 @@ button[disabled] {
 .timer .value {
   display: block;
   font-size: 2em;
+}
+
+.form {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-gap: 10px;
+  align-items: end;
+  max-width: 600px;
+}
+
+.form input {
+  display: block;
+  width: 100%;
 }
